--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Build PDF
         uses: docker://jeandeaual/lilypond:2.24.3
+        env:
+            LANG: 'C.UTF-8'
         with:
           args: lilypond -dno-point-and-click -dembed-source-code -dpaper-size=\"a4\" -o build \"Bjargið Alda.ly\"
       - name: Get short SHA
