--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,18 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Build PDF
         uses: docker://jeandeaual/lilypond:2.24.3
         env:
             LANG: 'C.UTF-8'
         with:
           args: ./build
-      - name: Get short SHA
-        id: slug
-        run: echo "::set-output name=sha7::$(echo ${GITHUB_SHA} | cut -c1-7)"
       - name: Upload artifact
-        uses: actions/upload-artifact@v1.0.0
+        uses: actions/upload-artifact@v4
         with:
-          name: pdf-${{ steps.slug.outputs.sha7 }}
-          path: build
+          name: pdfs
+          path: |
+            *.pdf
