--- a/build
+++ b/build
@@ -1,4 +1,5 @@
 #!/bin/bash
 
 # Find all .ly files and process them with lilypond
-find . -type f -name "*.ly" -exec lilypond -dno-point-and-click "{}" \;
+mkdir output
+find . -type f -name "*.ly" -exec lilypond -dno-point-and-click -o "output" "{}" \;
