--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: codello/setup-lilypond@main
         with:
           lilypond-version: 2.24
+      - name: Install fonts
+        run: mkdir -p ~/.fonts && cp -r ./lilypond-lib/fonts ~/.fonts/
       - name: Compile scores
         run: ./build
       - name: Upload artifact
