--- a/build
+++ b/build
@@ -1,5 +1,5 @@
 #!/bin/bash
 
 # Find all .ly files and process them with lilypond
-mkdir output
-find . -type f -name "*.ly" -exec lilypond -dno-point-and-click -o "output" "{}" \;
+mkdir -p output
+find . -name "*.ly" -exec lilypond -dno-point-and-click -o "output" "{}" \;
